--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               const resultElement = document.getElementById(
                 "mapReduceProcessing"
               );
-              //   resultElement.textContent += data;
+                resultElement.textContent += data;
             }
           })
           .catch((error) => {
